<resources>
    <string name="app_name">Nxt2Me</string>
    <string name="app_version">Version 1.0</string>
    <string name="lbl_welcome_title">Take a first step for</string>
    <string name="lbl_welcome_subtitle">Atmanirbhar Bharat</string>
    <string name="lbl_welcome_desc">We encourage you to bring your shop online and reach maximum people in your area.</string>
    <string name="lbl_know_more">Know more</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_new_register">New Register</string>
    <string name="lbl_registration_intro_1">Join us and start earning from your passion or start your own business. You can also shop online from your nearest shopkeeper.</string>
    <string name="lbl_registration_intro_2a">Next 2 me is unique business opportunity where you can start your own business with minimal investment up to Rs.100/-</string>
    <string name="lbl_registration_intro_2b">*based on nature of business</string>
    <string name="lbl_registration_intro_3">We bring all local merchant online. You can book your appointments or you can order goods online from nearest merchant. Help them come online</string>
    <string name="lbl_registration_intro_4">Next to me is the bridge which bring merchant and customer together from same area. You define your area in which you would like to do your business</string>
    <string name="lbl_registration_intro_5">Next to me helps and encourage each every person to be independent and earn with respect. This service is free for many category where income is low. </string>
    <string name="lbl_registration_tnc">Terms and Condition</string>
    <string name="lbl_registration_tnc_1">1. Kindly use our payment gateway for payment it is safe and secure.</string>
    <string name="lbl_registration_tnc_2">2. We dont save any card details on server and on your local device. User are requested to enter their card detail while doing payment.</string>
    <string name="lbl_registration_tnc_3">3. In case of defective goods, you have to raise ticket through our application.</string>
    <string name="lbl_registration_tnc_4">4. Your data’s are safe and will not be shared to any 3rd party.</string>
    <string name="lbl_registration_tnc_5">5. This is platform brings different Merchant together and connect with Customer. We dont own any shop displayed in this application. We are service provider.</string>
    <string name="lbl_i_agree">I agree</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_congratulation">Congratulation!!</string>
    <string name="lbl_one_step_away">You are one step away from</string>
    <string name="lbl_app_link_sharing_1">1.  Starting your own business</string>
    <string name="lbl_app_link_sharing_2">2.  Earn from your passion</string>
    <string name="lbl_app_link_sharing_3">3.  You can bring your shop online</string>
    <string name="lbl_app_link_sharing_4">4.  Online shopping from local shops</string>
    <string name="lbl_app_link_sharing_5">5.  Book salon or beauty parlour online</string>
    <string name="lbl_app_link_sharing_6">6.  Create your own event</string>
    <string name="lbl_app_link_sharing_7">7.  Book your ride.</string>
    <string name="lbl_and_many_more">And many more…</string>
    <string name="lbl_app_link_sharing_desc">Your sharing may help someone who is needy or looking opportunity for revenue earning. Through this application directly or indirectly you will help yourself, local merchant or High-flyer in your location. </string>
    <string name="lbl_next">Next</string>
    <string name="lbl_new_registration_desc">Next to me is the bridge which bring merchant and customer together from same area. You define your area in which you would like to do your business</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_society_name">Society name</string>
    <string name="lbl_wing_flat_no">Wing and Flat no</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_referral_code_optional">Referral Code (Optional)</string>
    <string name="lbl_search">Search store by name or by categories</string>
    <string name="lbl_tab_home">Home</string>
    <string name="lbl_tab_my_activity">My activity</string>
    <string name="lbl_tab_daily_essentials">Daily Essentials</string>
    <string name="lbl_tab_beauty_care">Beauty Care</string>
    <string name="lbl_tab_health_care">Health Care</string>
    <string name="lbl_tab_miscellaneous">Miscellaneous</string>
    <string name="lbl_tab_quick_connect">Quick Connect</string>
    <string name="lbl_tab_high_flyer">High-Flyer</string>
    <string name="lbl_tab_chat">Chat</string>
    <string name="lbl_homemade_food">Homemade food</string>
    <string name="lbl_classes">Classes</string>
    <string name="lbl_tailor">Tailor</string>
    <string name="lbl_beautician">Beautician</string>
    <string name="lbl_boutique">Boutique</string>
    <string name="lbl_daycare">Daycare</string>
    <string name="lbl_event_organiser">Event Organiser</string>
    <string name="lbl_photographer">Photographer</string>
    <string name="lbl_dj_on_hire">DJ on Hire</string>
    <string name="lbl_delivery_boy">Delivery Boy</string>
    <string name="lbl_more">More</string>
    <string name="lbl_grocery">Grocery</string>
    <string name="lbl_veg_fruits">Veg &amp; Fruits</string>
    <string name="lbl_dairy">Dairy</string>
    <string name="lbl_meat_fish">Meat &amp; Fish</string>
    <string name="lbl_beer_wine">Beer &amp; Wine</string>
    <string name="lbl_pharmacy">Pharmacy</string>
    <string name="lbl_laundry">Laundry</string>
    <string name="lbl_fresh_from_farm">Fresh from farm</string>
    <string name="lbl_bakery">Bakery</string>
    <string name="lbl_book_a_ride">Book a Ride</string>
    <string name="lbl_salon">Salon</string>
    <string name="lbl_beauty_parlor">Beauty Parlor</string>
    <string name="lbl_unisex_salon">Unisex Salon</string>
    <string name="lbl_massage_parlour">Massage Parlour</string>
    <string name="lbl_spa">Spa</string>
    <string name="lbl_ayurvedic_center">Ayurveda Center</string>
    <string name="lbl_cosmetic">Cosmetic</string>
    <string name="lbl_salon_at_home">Salon at Home</string>
    <string name="lbl_massage_at_home">Massage at Home</string>
    <string name="lbl_doctor">Doctor</string>
    <string name="lbl_nurse">Nurse</string>
    <string name="lbl_dietician">Dietitian</string>
    <string name="lbl_gym">Gym</string>
    <string name="lbl_health_supplements">Health Supplements</string>
    <string name="lbl_physiotherapist">Physiotherapist</string>
    <string name="lbl_zumba_class">Zumba Class</string>
    <string name="lbl_yoga_class">Yoga Class</string>
    <string name="lbl_dance_class">Dance Class</string>
    <string name="lbl_martial_art_coach">Martial Art Coach</string>
    <string name="lbl_gifts_and_article">Gifts and Article</string>
    <string name="lbl_flower_shop">Flower shop</string>
    <string name="lbl_ice_cream_parlour">Ice Cream Parlour</string>
    <string name="lbl_stationary">Stationery</string>
    <string name="lbl_vessel_shop">Vessel shop</string>
    <string name="lbl_electronic_shop">Electronic shop</string>
    <string name="lbl_movers_and_packer">Movers &amp; packers</string>
    <string name="lbl_pet_shop">Pet Shop</string>
    <string name="lbl_garage">Garage</string>
    <string name="lbl_car_accessories">Car Accessories</string>
    <string name="lbl_maid">Maid</string>
    <string name="lbl_cook">Cook</string>
    <string name="lbl_electrician">Electrician</string>
    <string name="lbl_courier">Courier</string>
    <string name="lbl_travel_agent">Travel Agent</string>
    <string name="lbl_plumber">Plumber</string>
    <string name="lbl_pest_control">Pest Control</string>
    <string name="lbl_view_by_category">View by Category</string>
    <string name="lbl_kids_and_learner">Kids and Learner</string>
    <string name="lbl_homemade_food_service">Homemade Food Service</string>
    <string name="lbl_professional_service">Professional Service</string>
    <string name="lbl_other_services">Other Services</string>
    <string name="lbl_language_classes">Language Classes</string>
    <string name="lbl_computer_classes">Computer Classes</string>
    <string name="lbl_cooking_class">Cooking Class</string>
    <string name="lbl_coach">Coach</string>
    <string name="lbl_singing_class">Singing Class</string>
    <string name="lbl_personality_developement">Personality Development</string>
    <string name="lbl_multimedia_classes">Multimedia Class</string>
    <string name="lbl_design_class">Design Class</string>
    <string name="lbl_drawing_class">Drawing Class</string>
    <string name="lbl_snacks">Snacks</string>
    <string name="lbl_cake">Cake</string>
    <string name="lbl_sweets">Sweets</string>
    <string name="lbl_chocolates">Chocolates</string>
    <string name="lbl_pizza_and_burger">Pizza and Burger</string>
    <string name="lbl_mother_kitchen">Mother kitchen</string>
    <string name="lbl_tiffin_service">Tiffin service</string>
    <string name="lbl_catering">Catering</string>
    <string name="lbl_festive_special">Festival specia</string>
    <string name="lbl_astrologer">Astrologer</string>
    <string name="lbl_tarot_card_reader">Tarot Card reader</string>
    <string name="lbl_interior_designer">Interior designer</string>
    <string name="lbl_camp_organiser">Camp organizer</string>
    <string name="lbl_labour">Labour</string>
    <string name="lbl_insurance_broker">Insurance Broker</string>
    <string name="lbl_charter_accountant">Charter Accountant</string>
    <string name="lbl_veterinary">Veterinary</string>
    <string name="lbl_security_agency">Security Agency</string>
    <string name="lbl_investment_advisor">Investment Advisor</string>
    <string name="lbl_priest">Priest/ Pandit</string>
    <string name="lbl_cleaning_service">Cleaning service</string>
    <string name="lbl_disinfection_service">Disinfection service</string>
    <string name="lbl_real_estate_broker">Real Estate Broker</string>
    <string name="lbl_baby_care">Baby Care</string>
    <string name="lbl_games_on_rent">Games on Rent</string>
    <string name="lbl_add_image">Add Image</string>
    <string name="lbl_upload_from_gallery">Upload from gallery</string>
    <string name="lbl_use_camera">Use camera</string>
    <string name="tnc_1">1. <b>₹200</b> will be charged monthly as internet service charges. <b>Additional 5%</b> will be charged on transaction, if you are using our secured online payment service</string>
    <string name="tnc_2">2. In case of any fraud or disagreement in payment or cancellation of order FST step is not responsible.</string>
    <string name="tnc_3">3. We recommend user to use our secured payment channel.</string>
    <string name="tnc_booking_4">4. On cash transition, its responsible of High-Flyer to transfer service charge in FST step account. Incase of failure 3 reminder would be sent. Even after reminder High-Flyer doesnt pay his/her account would be deactivated.</string>
    <string name="tnc_booking_5">5. Your service will be showcased based on area defined by you.</string>
    <string name="lbl_delete_desc">Are you sure you want to delete this item?</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="lbl_deactive_account">Deactive account</string>
    <string name="lbl_desc_deactivate"><![CDATA[You can deactivate your account for a while or you can deactivate your account permanently. In case of permanent  deactivation, you have to re-register your account again.]]></string>
    <string name="lbl_deactivate_temporary">Deactivate Temporary</string>
    <string name="lbl_deactivate_permanent">Deactivate Permanent</string>
</resources>