<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTnc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/markformc"
            android:text="@string/tnc_1"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/tnc_text_color"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTnc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/markformc"
            android:text="@string/tnc_2"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/tnc_text_color"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTnc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/markformc"
            android:text="@string/tnc_3"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/tnc_text_color"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTnc4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/markformc"
            android:text="@string/tnc_booking_4"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/tnc_text_color"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTnc5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/markformc"
            android:text="@string/tnc_booking_5"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/tnc_text_color"
            />
    </LinearLayout>
</layout>