<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_borders"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="17dp"
        android:elevation="4dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logo_nxt_2_me_small"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="27dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCongratulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_congratulation"
            android:fontFamily="@font/markformc_medium"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="#00adee"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            android:layout_marginTop="62dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOneStepAway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_one_step_away"
            android:fontFamily="@font/markformc_medium"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#f05a28"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvCongratulation"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppLink1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_1"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvOneStepAway"
            android:layout_marginTop="20dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppLink2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_2"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppLink1"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppLink3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_3"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppLink2"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppLink4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_4"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppLink3"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppLink5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_5"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppLink4"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppLink6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_6"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppLink5"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppLink7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_7"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppLink6"
            android:layout_marginTop="2dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAndManyMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_and_many_more"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#ff5a1f"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppLink7"
            android:layout_marginTop="3dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_link_sharing_desc"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@id/tvAndManyMore"
            android:layout_marginTop="20dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="skip"
            android:id="@+id/btn_skip"
            android:fontFamily="@font/markformc_medium"
            android:textStyle="normal"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:backgroundTint="@color/accent_blue"
            android:textColor="@color/white"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_share"
            android:textAllCaps="false"
            android:fontFamily="@font/markformc_medium"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            app:cornerRadius="8dp"
            android:backgroundTint="@color/accent_blue"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="68dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="38dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>