<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingBottom="28dp"
        android:background="@drawable/dialog_inset"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete"
            android:textColor="#ec1d24"
            android:textSize="18sp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/markformc_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delete_desc"
            android:textSize="14sp"
            android:fontFamily="@font/markformc"
            android:textColor="@color/black"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/markformc_medium"
            android:padding="10dp"
            android:text="@string/lbl_yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="@color/accent_blue"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonNo"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/markformc_medium"
            android:padding="10dp"
            android:text="@string/lbl_no"
            android:layout_marginStart="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/accent_blue"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonYes"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>