<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="handler"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:background="@drawable/dialog_inset"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_deactive_account"
            android:textColor="@color/slots_pink"
            android:textSize="18sp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/markformc_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_desc_deactivate"
            android:textSize="14sp"
            android:fontFamily="@font/markformc"
            android:textColor="@color/black"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDeactivateTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/markformc_medium"
            android:padding="10dp"
            android:text="@string/lbl_deactivate_temporary"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/accent_blue"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDeactivatePerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/markformc_medium"
            android:padding="10dp"
            android:text="@string/lbl_deactivate_permanent"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/accent_blue"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/buttonDeactivateTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>