<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="handler"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:background="@drawable/dialog_inset">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_add_image"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:letterSpacing="0.1"
            android:fontFamily="@font/markformc_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:id="@+id/layoutGalleryPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:onClick="@{handler::onClick}"
            android:gravity="center_vertical"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_gallery"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/markformc_medium"
                android:layout_marginStart="16dp"
                android:textColor="@color/menu_card_text"
                android:textSize="18sp"
                android:text="@string/lbl_upload_from_gallery"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutGalleryPicker"
            android:onClick="@{handler::onClick}"
            android:gravity="center_vertical"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:srcCompat="@drawable/ic_camera"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/markformc_medium"
                android:layout_marginStart="16dp"
                android:textColor="@color/menu_card_text"
                android:textSize="18sp"
                android:text="@string/lbl_use_camera"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>